--- a/public/assets/i18n/common/en.json
+++ b/public/assets/i18n/common/en.json
@@ -7,7 +7,7 @@
     "backBtn": "Back",
     "moreBtn": "More",
     "becomeAJedi": "Become a JEDI!",
-    "alreadyAJedi": "Already a JEDI?",
+    "alreadyAJedi": "Already a DUDE?",
     "welcome": "Welcome",
     "loginHere": "Login here, my fellow Jedi!",
     "submit": "Submit",
