--- a/public/assets/i18n/common/bg.json
+++ b/public/assets/i18n/common/bg.json
@@ -7,7 +7,7 @@
     "backBtn": "Назад",
     "moreBtn": "Напред",
     "becomeAJedi": "Стани Джедай!",
-    "alreadyAJedi": "Вече си Пич?",
+    "alreadyAJedi": "Вече си Джедай?",
     "welcome": "Добре дошли",
     "loginHere": "Влезте в акаута си тук!",
     "submit": "Напред",
